The final version for the PC

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -5,6 +5,8 @@ $color-blue-dark: #101D2C;
 
 $color-gray-dark: #AAAAAA;
 $color-gray-light: #F5F5F5;
+
+$color-white: #ffffff;
     
     
 *, ::after, ::before {
@@ -15,4 +17,19 @@ $color-gray-light: #F5F5F5;
 
 html {
     font-size: 62.5%
+}
+
+body {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    color: $color-gray-light;
+    line-height: 113%;
+    font-size: 1.6rem;
+    background-color: $color-gray-light;
+}
+
+.container {
+    display: grid;
+    grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+    grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
 }
