--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -7,16 +7,52 @@ $color-gray-dark: #AAAAAA;
 $color-gray-light: #F5F5F5;
 
 $color-white: #ffffff;
-    
-    
-*, ::after, ::before {
+
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media only screen and (max-width: 470px) {
+            @content;
+        }
+    }
+
+    @if $breakpoint == tab-port {
+        @media only screen and (max-width: 900px) {
+            @content;
+        }
+    }
+
+    @if $breakpoint == tab-land {
+        @media only screen and (max-width: 1170px) {
+            @content;
+        }
+    }
+
+    @if $breakpoint == big-screen {
+        @media only screen and (max-width: 1800px) {
+            @content;
+        }
+    }
+}
+
+*,
+::after,
+::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%
+    font-size: 62.5%;
+
+    @include respond (tab-land) {
+        font-size: 55%;
+    }
+
+    @include respond (phone) {
+        font-size: 45%;
+    }
+
 }
 
 body {
@@ -32,4 +68,13 @@ body {
     display: grid;
     grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
     grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+
+    @include respond (tab-land) {
+        grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+    }
+
+    @include respond (tab-port) {
+        grid-template-rows: 6rem calc(100vh - 6rem) min-content min-content min-content 50vw repeat(3, min-content);
+    }
 }
