--- a/src/scss/_gamers.scss
+++ b/src/scss/_gamers.scss
@@ -2,10 +2,32 @@
     grid-column: col-start 7 / full-end;
     background-color: $color-blue-dark;
     display: grid;
-    grid-template-columns: min-content max-content;
+    grid-template-columns: max-content;
     grid-gap: 4rem 2rem;
     align-content: center;
     justify-content: center;
+
+    @include respond (tab-port) {
+        grid-column: 1 / -1;
+        grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
+        justify-items: center;
+        padding: 3rem 0;
+    }
+
+    @include respond (phone) {
+        grid-template-columns: min-content;
+        justify-items: start;
+    }
+
+    &__box {
+        display: grid;
+        grid-template-columns: max-content max-content;
+        grid-gap: 0 2rem;
+
+        @include respond (tab-port) {
+        }
+    }
+
     &__img {
         width: 7rem;
         border-radius: 100%;
