--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -1,8 +1,17 @@
 .sidebar {
     grid-column: sidebar-start / sidebar-end;
     grid-row: 1 / -1;
+    display: flex;
     background-color: $color-green-dark;
     padding: 2.5rem 1.5rem;
+    @include respond(tab-land) {
+        grid-row: 1 / 2;
+        grid-column: 1 / -1;
+        padding: 0 4rem 0 0;
+        justify-content: end;
+        align-items: center;
+
+    }
 }
 
 .hamburger {
